app/app/components/Sidebar.css
.sidebar {
  width: 220px;
  height: 100vh;
  background: #010810;
  border-right: 1px solid #ffffff;
  padding: 20px;
  border-radius: 6px ;
  box-shadow: 6px 6px 12px black;
  
  position: fixed;
  top: 0;
  left: 0;

  width: 220px;
  height: 100vh;

  background: #010810;
  border-right: 1px solid white;
  padding: 20px;

  overflow-y: auto;
}


.sidebar h1 {
  font-size: 24px;
  margin-bottom: 20px;
}

.sidebar nav {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.sidebar a {
  text-decoration: none;
  color: #ffffff;
  padding: 10px 12px;
  border-radius: 6px;
  transition: background 0.2s;
}

.sidebar a:hover {
  background: #c2c2c2;
}
input{
    border-radius: 6px 12px;
}

h3{
    color: white;
}

